2012-10-24  Alex Kellner <alexander.kellner@in2code.de>

	* Release of wt_twitter 0.5.5